[project]
name = "dracor-mcp"
version = "0.1.0"
description = "DraCor MCP server for interacting with the Drama Corpora Project API v1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "requests",
    "pydantic",
    "python-multipart",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
